PR bin/50834o: fix expansions of (unquoted) ${unset_var-} and ""$@ (from kre)